--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
 			<artifactId>metadata-extractor</artifactId>
 			<version>2.12.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-core</artifactId>
+    		<version>5.11.0</version>
+    		<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
